# reqguard

./: README.md  pyproject.toml
packaging/debian/: control
packaging/default/: reqguard
scripts/: build-deb.sh
src/reqguard/: __init__.py  banlist.py  keys.py  matchers.py  text.py  tui.py  web_tui.py  weblog.py
tests/: test_banlist.py  test_keys.py  test_matchers.py  test_procnet.py  test_security_hardening.py  test_stats.py  test_tui_grouping.py  test_viewport.py  test_weblog.py
